2017.10/_sources/plugins/available/diversity/bioenv.txt
bioenv: bioenv
==============

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime diversity bioenv [OPTIONS]

     Find the subsets of variables in metadata whose Euclidean distances are
     maximally rank-correlated with distance matrix. All numeric variables in
     metadata will be considered, and samples which are missing data will be
     dropped. The output visualization will indicate how many samples were
     dropped due to missing data, if any were dropped.

   Options:
     --i-distance-matrix PATH  Artifact: DistanceMatrix  [required]
                               Matrix of
                               distances between pairs of samples.
     --m-metadata-file PATH    Metadata file or artifact viewable as metadata.
                               This option may be supplied multiple times to
                               merge metadata  [required]
                               The sample metadata.
     --o-visualization PATH    Visualization [required if not passing --output-
                               dir]
     --output-dir DIRECTORY    Output unspecified results to a directory
     --cmd-config PATH         Use config file for command options
     --verbose                 Display verbose output to stdout and/or stderr
                               during execution of this action.  [default: False]
     --quiet                   Silence output if execution is successful (silence
                               is golden).  [default: False]
     --help                    Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>bioenv

   Find the subsets of variables in metadata whose Euclidean distances are
   maximally rank-correlated with distance matrix. All numeric variables in
   metadata will be considered, and samples which are missing data will be
   dropped. The output visualization will indicate how many samples were
   dropped due to missing data, if any were dropped.

   Parameters
   ----------
   distance_matrix : DistanceMatrix
       Matrix of distances between pairs of samples.
   metadata : Metadata
       The sample metadata.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>