2018.4/_sources/plugins/available/diversity/bioenv.txt
bioenv: bioenv
==============


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: diversity:bioenv.bib
   :all:
   :keyprefix: diversity:bioenv:
   :labelprefix: diversity:bioenv:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime diversity bioenv [OPTIONS]

     Find the subsets of variables in metadata whose Euclidean distances are
     maximally rank-correlated with distance matrix. All numeric variables in
     metadata will be considered, and samples which are missing data will be
     dropped. The output visualization will indicate how many samples were
     dropped due to missing data, if any were dropped.

   Options:
     --i-distance-matrix ARTIFACT PATH DistanceMatrix
                                     Matrix of distances between pairs of
                                     samples.  [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. The sample
                                     metadata.  [required]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>bioenv

   Find the subsets of variables in metadata whose Euclidean distances are
   maximally rank-correlated with distance matrix. All numeric variables in
   metadata will be considered, and samples which are missing data will be
   dropped. The output visualization will indicate how many samples were
   dropped due to missing data, if any were dropped.

   Parameters
   ----------
   distance_matrix : DistanceMatrix
       Matrix of distances between pairs of samples.
   metadata : Metadata
       The sample metadata.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>